# Model-based-Embedded-Systems-Design

1/: a1e1.slx  a1e2.slx
2/: Mu.m  b1.slx
3/: Microwave.slx  VendingMachine.slx
4/: Final_Elevator.slx  lift.m  lift_move.m  mk_axes.m  mk_fig.m  mk_mass.asv  mk_mass.m  move_mass.m  smd1_pi_graphics.slx
5/: Requirements.slx  Torch_Bridge_Updated.slx
Elevator/: Elevator_project (1).slx  Elevator_project.slx
Elevator/Final_Elevator_project/: CMakeLists.txt  main.c
Elevator/Final_Elevator_project/Elevator_project/: Elevator_project.c  Elevator_project.h  Elevator_project_private.h  Elevator_project_types.h  buildInfo.mat  defines.txt  multiword_types.h  rt_zcfcn.c  rt_zcfcn.h  rtmodel.h  rtwtypes.h
